--- a/webapp/src/main/resources/templates/fleet/createpack.html
+++ b/webapp/src/main/resources/templates/fleet/createpack.html
@@ -9,23 +9,6 @@
 
     } );
 
-    function addInPack(id){
-        var data = "id=" + encodeURIComponent(id);
-
-        $.ajax({
-            url : "/addoptiontopack",
-            data : data,
-            type : "GET",
-
-            success : function(response) {
-                alert( response );
-            },
-            error : function(xhr, status, error) {
-                alert(xhr.responseText);
-            }
-        });
-    }
-
 
 </script>
 
@@ -35,30 +18,56 @@
         <div class="col-lg-12">
             <div>
 
-<form method="POST" th:object="${pack}" action="/fleet/createpack">
-    <div >
+
+    <div style="float:left; width: 45%">
+        <form method="POST" th:object="${pack}" action="/fleet/createpack">
     <div th:class="${#fields.hasErrors('name')}? 'has-error'">
-        <label th:for="${#ids.next('name')}"> name:</label>
+        <label th:for="${#ids.next('name')}"> <p th:text="#{pack.namem}">Name</p></label>
         <input type="text" th:field="*{name}" />
         <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
     </div>
 
     <div th:class="${#fields.hasErrors('price')}? 'has-error'">
-        <label th:for="${#ids.next('price')}"> price:</label>
+        <label th:for="${#ids.next('price')}"> <p th:text="#{pack.price}">Price</p></label>
         <input type="text" th:field="*{price}" />
         <span th:if="${#fields.hasErrors('price')}" th:errors="*{price}"></span>
     </div>
+        <button type="submit" class="btn btn-primary"><p th:text="#{pack.new}">add</p> </button>
+</form>
 
 </div>
+                <div style="float:left; width: 55%">
+                <form method="POST" th:object="${carOption}"  action="/fleet/createnewpackoption">
+                    <div th:class="${#fields.hasErrors('name')}? 'has-error'">
+                        <label th:for="${#ids.next('name')}"><p th:text="#{option.namem}">Name</p> </label>
+                        <input type="text" th:field="*{name}" />
+                        <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
+                    </div>
+
+                    <div th:class="${#fields.hasErrors('description')}? 'has-error'">
+                        <label th:for="${#ids.next('description')}"> <p th:text="#{option.description}">Descriptin</p></label>
+                        <input type="text" th:field="*{description}" />
+                        <span th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></span>
+                    </div>
+
+
+                    <br/>
+
+                    <button type="submit" class="btn btn-primary"><p th:text="#{pack.newoption}">add</p> </button>
+
+                </form>
+                    </div>
+                <br/>
+                <br/>
     <div>
     <div style="float:left; width: 45%">
-        <h1> SelectedOptions </h1>
+        <h1> <p th:text="#{pack.selectedoptions}">selecopt</p> </h1>
         <table>
             <tr th:each="caropt,idStat  : ${pack.carOptions}">
 
                 <td th:text="${caropt.name}"></td>
-                <td th:text="${caropt.description}"></td>
-                <td> <a th:href="${#mvc.url('PC#removeOption').arg(0, idStat.index).build()}" > Remove </a> </td>
+
+                <td> <a th:href="${#mvc.url('PC#removeOption').arg(0, idStat.index).build()}" > <p th:text="#{pack.removeoption}">remove</p> </a> </td>
             </tr>
 
         </table>
@@ -71,16 +80,16 @@
     <table  id="possibleoptions" >
         <thead>
         <tr>
-            <th>Name </th>
-            <th>Description</th>
+            <th><p th:text="#{option.name}"> Name </p> </th>
+            <th><p th:text="#{option.description}"> Description</p></th>
             <th> </th>
 
         </tr>
         </thead>
         <tfoot>
         <tr>
-            <th>Name</th>
-            <th>Description</th>
+            <th><p th:text="#{option.name}"> Name </p> </th>
+            <th><p th:text="#{option.description}"> Description</p></th>
         </tr>
         </tfoot>
 
@@ -95,7 +104,7 @@
 
 
 
-            <td> <a th:href="${#mvc.url('PC#addOption').arg(0, caroption.id).build()}" > Add to pack </a> </td>
+            <td> <a th:href="${#mvc.url('PC#addOption').arg(0, caroption.id).build()}" ><p th:text="#{pack.addoptionto}"> Add </p> </a> </td>
 
 <!--
             <td> <a th:onclick="'javascript:addInPack(\'' + ${caroption.id} + '\');'" > badd </a> </td>
@@ -112,30 +121,16 @@
 
 
 
-    <button type="submit">Save pack </button>
-</form>
 
+
+
+<br/>
+<br/>
 </div>
 
     <br/>
 <div style="clear:both;">
-            <form method="POST" th:object="${carOption}"  action="/fleet/createnewpackoption">
-                <div th:class="${#fields.hasErrors('name')}? 'has-error'">
-                    <label th:for="${#ids.next('name')}"> name:</label>
-                    <input type="text" th:field="*{name}" />
-                    <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
-                </div>
 
-                <div th:class="${#fields.hasErrors('description')}? 'has-error'">
-                    <label th:for="${#ids.next('description')}"> description:</label>
-                    <input type="text" th:field="*{description}" />
-                    <span th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></span>
-                </div>
-
-
-                <br/>
-                <button type="submit">Add new pack Option </button>
-            </form>
 
 </div>
         </div>
