css and internationalization for employee and edit password

--- a/webapp/src/main/resources/templates/employees/editpassword.html
+++ b/webapp/src/main/resources/templates/employees/editpassword.html
@@ -13,26 +13,26 @@
 
             <form method="POST" th:object="${editPassword}">
                 <div th:class="${#fields.hasErrors('existingPassword')}? 'has-error'">
-                    <label th:for="${#ids.next('existingPassword')}"> Existing Password:</label>
-                    <input type="text" th:field="*{existingPassword}" />
+                    <label th:for="${#ids.next('existingPassword')}"> <p th:text="#{employee.oldpassword}"> old password </p></label>
+                    <input type="password" th:field="*{existingPassword}" />
                     <span th:if="${#fields.hasErrors('existingPassword')}" th:errors="*{existingPassword}"></span>
                 </div>
 
                 <div th:class="${#fields.hasErrors('newPassword')}? 'has-error'">
-                    <label th:for="${#ids.next('newPassword')}"> New Password:</label>
-                    <input type="text" th:field="*{newPassword}" />
+                    <label th:for="${#ids.next('newPassword')}"> <p th:text="#{employee.newpassword}">new password </p></label>
+                    <input type="password" th:field="*{newPassword}" />
                     <span th:if="${#fields.hasErrors('newPassword')}" th:errors="*{newPassword}"></span>
                 </div>
                 <div th:class="${#fields.hasErrors('confirmedPassword')}? 'has-error'">
-                    <label th:for="${#ids.next('confirmedPassword')}"> Confirm Password:</label>
-                    <input type="text" th:field="*{confirmedPassword}" />
+                    <label th:for="${#ids.next('confirmedPassword')}"> <p th:text="#{employee.confirmpassword}"> confirm password </p></label>
+                    <input type="password" th:field="*{confirmedPassword}" />
                     <span th:if="${#fields.hasErrors('confirmedPassword')}" th:errors="*{confirmedPassword}"></span>
                 </div>
 
 
 
                 <br/>
-                <button type="submit">Update Password </button>
+                <button type="submit" class="btn btn-primary"><p th:text="#{employee.updatepassword}"> Update Password </p> </button>
             </form>
 
 
