--- a/webapp/src/main/resources/templates/employees/select-car.html
+++ b/webapp/src/main/resources/templates/employees/select-car.html
@@ -2,6 +2,14 @@
 <head th:replace="fragments/fragments :: head">
 </head>
 <body>
+<div th:replace="fragments/fragments :: div.scripts"></div>
+<script>
+    function submit(){
+        document.forms["filter"].submit();
+    }
+</script>
+
+
 <div th:replace="fragments/fragments :: header"></div>
 
 <div class="container">
@@ -14,18 +22,17 @@
             <h3>From Catalog:</h3>
 
             <div>
-                <form method="get" th:action="@{/employees/select-car/filter}" th:object="${filterCarsDTO}">
+                <form name="filter" id="filter" method="get" th:action="@{/employees/select-car/filter}" th:object="${filterCarsDTO}">
                     <span style="font-weight:bold;">Brand: </span>
-                    <input id="brand" name="brand" type="text" th:field="*{brand}"/> -
+                    <input id="brand" name="brand" type="text" th:field="*{brand}" onblur="submit()"/> -
                     <span style="font-weight:bold;">Model: </span>
-                    <input id="carModel" name="carModel" type="text" th:field="*{model}"/><br/>
+                    <input id="carModel" name="carModel" type="text" th:field="*{model}" onblur="submit()"/><br/>
                     <span style="font-weight:bold;">Level: </span>
-                    <input name="level" id="allPossible" type="radio" th:field="*{level}" value="allPossible"/>All
+                    <input name="level" id="allPossible" type="radio" th:field="*{level}" value="allPossible" onclick="submit()"/>All
                     Possible
-                    <input name="level" id="downgrade" type="radio" th:field="*{level}" value="downgrade"/>Downgrade
-                    <input name="level" id="myLevel" type="radio" th:field="*{level}" value="myLevel"/>My Level
-                    <input name="level" id="upgrade" type="radio" th:field="*{level}" value="upgrade"/>Upgrade <br/>
-                    <input type="submit" value="Filter" class="form-control"/>
+                    <input name="level" id="downgrade" type="radio" th:field="*{level}" value="downgrade" onclick="submit()"/>Downgrade
+                    <input name="level" id="myLevel" type="radio" th:field="*{level}" value="myLevel" onclick="submit()"/>My Level
+                    <input name="level" id="upgrade" type="radio" th:field="*{level}" value="upgrade" onclick="submit()"/>Upgrade <br/>
                 </form>
             </div>
 
@@ -84,6 +91,6 @@
     <hr/>
 </div>
 
-<div th:replace="fragments/fragments :: div.scripts"></div>
+
 </body>
 </html>
